--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,31 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+@keyframes arrow {
+    0% {
+        transform: translateX(-5px);
+    }
+
+    100% {
+        transform: translateX(4px);
+    }
+}
+
+@keyframes heart {
+    0% {
+        transform:scale(1);
+    }
+    100% {
+        transform:scale(1.5);
+    }
+}
+
+@keyframes sparks {
+    0% {
+        opacity: 0%;
+    }
+
+    100% {
+        opacity: 100%;
+    }
+}
