--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,40 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-dark {
+    --thickness-text-card: 465;
+    --thickness-title-card: 785;
+    --background-color: #000;
+    --accent-color: #00CC14;
+    --background-image:repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
+                       repeating-linear-gradient(to bottom, #000 0px 2px, transparent 2px 4px),
+                       repeating-linear-gradient(to bottom, #007f0c 0%, #004306 100%);
+    --color-button-text: #00CC14;
+    --color-sparks: red;
+  }
+  
+  :root.theme-light {
+    --thickness-text-card: 400;
+    --thickness-title-card: 700;
+    --background-color: #fff;
+    --accent-color: #000;
+    --color-button-text: #fff;
+    --color-sparks: red;
+    --background-image: url(../images/background-white.jpg),
+                         repeating-linear-gradient(to right, #d3d3d3 0px 2px, transparent 2px 4px),
+                         repeating-linear-gradient(to bottom, #d3d3d3 0px 2px, transparent 2px 4px),
+                         repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+  }
+  
+  @media (prefers-color-scheme: dark) {
+      :root {
+          --thickness-text-card: 465;
+          --thickness-title-card: 785;
+          --background-color: #000;
+          --accent-color: #00CC14;
+          --background-image:repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
+                             repeating-linear-gradient(to bottom, #000 0px 2px, transparent 2px 4px),
+                             repeating-linear-gradient(to bottom, #007f0c 0%, #004306 100%);
+          --color-button-text: #00CC14;
+      }
+  }
