--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   font-family: var(--main-font), sans-serif;
-  font-variation-settings: "wght" var(--thickness-title-card) var(--thickness-text-card);
+  font-variation-settings: 'wght' var(--weight-main-text);
   background-color: var(--background-color);
   color: var(--accent-color);
   background-image: var(--background-image);
@@ -158,11 +158,15 @@
   z-index: 2;
 }
 
-@supports (-webkit-text-stroke: 1px var(--background-color)) {
-
+@supports (
+  (text-rendering: 1px var(--background-color))
+  or
+    (-webkit-text-stroke: 1px var(--background-color))
+) {
   .card-item__label {
-      -webkit-text-stroke: 0.4px var(--background-color);
-      text-shadow: none;
+    -webkit-text-stroke: 1px var( --background-color);
+    text-rendering: 1px var( --background-color);
+    text-shadow: none;
   }
 }
 
