--- a/styles/style.css
+++ b/styles/style.css
@@ -14,12 +14,6 @@
   background-attachment: fixed;
 }
 
-/* Контейнер */
-
-.width-content {
-  width: var(--size-content);
-}
-
 /*Шапка*/
 
 .header {
@@ -117,6 +111,11 @@
 }
 
 /*Карточка*/
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .card-item {
   border: 2px solid var(--accent-color);
@@ -125,7 +124,7 @@
 }
 
 .card-itrm__title {
-  height: 31px;
+  min-height: 31px;
   padding: 5px 24px 3px 10px;
   font-size: 18px;
   font-weight: var(--thickness-title-card);
@@ -135,7 +134,6 @@
   position: relative;
   max-block-size: 696px;
   border-top: 2px solid var(--accent-color);
-  border-bottom: 2px solid var(--accent-color);
 }
 
 .item__img {
@@ -198,7 +196,7 @@
   border: 2px solid transparent;
 }
 
-.card__like-button {
+.card__like-button, .button__save, .button_ok {
   width: 130px;
   height: 38px;
   padding: 9px 17px;
@@ -275,6 +273,10 @@
 .core {
   fill: transparent;
   transition: 0.3s;
+}
+
+.width-content{
+  width: var(--size-content)
 }
 
 .main-body {
@@ -378,7 +380,7 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
-  margin: 0px auto;
+  margin: 0px auto 105px;
   border: 2px solid var(--accent-color);
   font-family: var(--accent-font), fantasy;
   font-size: 14px;
@@ -417,9 +419,18 @@
   background-color: black;
   filter: opacity(0.75);
 } 
-/*Мобильная верстка*/
 
-@media (max-width: 702px) {
+.dialog_text{
+  text-transform: uppercase;
+    font-size: 14px;
+    font-family: var(--accent-font, fantasy);
+    color: var(--thems-main-color);
+    line-height: 150%;
+    text-align: left;
+    max-inline-size: 200px;
+}
+/*Мобильная верстка*/
+@media (width <= 376px) {
 
   .width-content {
     inline-size: 100%;
@@ -459,23 +470,20 @@
   }
 
   .card-buttons {
-    padding: 24px 25px 23px 0;
+    padding: 30px 25px 23px 0;
   }
 
-.footer {
-  margin-top: 51px;
-}
 
 .icon-m {
   width: 28px;
   height: 28px;
 }
 
-.footer .card__like-button {
+.button__save {
   width: 308px;
-  height: 100%;
+  height: 82px;
   display: flex;
   flex-direction: column;
+  margin: 37px auto 100px;
   }
 }
-
