--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,7 +10,7 @@
                         repeating-linear-gradient(to right, #d3d3d3 0px 2px, transparent 2px 4px),
                         repeating-linear-gradient(to bottom, #d3d3d3 0px 2px, transparent 2px 4px),
                         repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
-    --size-content: clamp(371px, 700px, 1500px);
+    --size-content: clamp(371px, 48.5%, 1500px);
     --color-button-text: #fff;
     --color-sparks: red;
- }
+}
