--- a/styles/themes.css
+++ b/styles/themes.css
@@ -6,45 +6,39 @@
 */
 
 :root.theme-dark {
+    --thickness-text-card: 465;
+    --thickness-title-card: 785;
     --background-color: #000;
     --accent-color: #00CC14;
-    --font-weight-card-title: 785;
-    --font-weight-card-text: 465;
-    --buttom-like-text-color: #00CC14;
-    --heart-contour-color: #00CC14;
-    --heart-filling-color: red;
-    --heart-body-color: #00CC14;
-    --background-image: repeating-linear-gradient(#000,#000 2px, transparent 2px, transparent 4px), 
-    repeating-linear-gradient(90deg,#000,#000 2px, transparent 2px, transparent 4px),
-    linear-gradient(#007f0c, #004306);
-}
-
-:root.theme-light {
-    --background-color: #FFF;
+    --background-image:repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
+                       repeating-linear-gradient(to bottom, #000 0px 2px, transparent 2px 4px),
+                       repeating-linear-gradient(to bottom, #007f0c 0%, #004306 100%);
+    --color-button-text: #00CC14;
+    --color-sparks: red;
+  }
+  
+  :root.theme-light {
+    --thickness-text-card: 400;
+    --thickness-title-card: 700;
+    --background-color: #fff;
     --accent-color: #000;
-    --font-weight-card-title: 700;
-    --font-weight-card-text: 400;
-    --buttom-like-text-color: #FFF;
-    --heart-contour-color: #000;
-    --heart-filling-color: red;
-    --heart-body-color: #000;
-    --background-image: repeating-linear-gradient(#d3d3d3,#d3d3d3 2px, transparent 2px, transparent 4px), 
-    repeating-linear-gradient(90deg,#d3d3d3,#d3d3d3 2px, transparent 2px, transparent 4px),
-    linear-gradient(#e7e7e7, #1a1a1a);
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background-color: #000;
-        --accent-color: #00CC14;
-        --font-weight-card-title: 785;
-        --font-weight-card-text: 465;
-        --buttom-like-text-color: #00CC14;
-        --heart-contour-color: #00CC14;
-        --heart-filling-color: red;
-        --heart-body-color: #00CC14;
-        --background-image: repeating-linear-gradient(#000,#000 2px, transparent 2px, transparent 4px), 
-        repeating-linear-gradient(90deg,#000,#000 2px, transparent 2px, transparent 4px),
-        linear-gradient(#007f0c, #004306);
-    }
+    --color-button-text: #fff;
+    --color-sparks: red;
+    --background-image: url(../images/background-white.jpg),
+                         repeating-linear-gradient(to right, #d3d3d3 0px 2px, transparent 2px 4px),
+                         repeating-linear-gradient(to bottom, #d3d3d3 0px 2px, transparent 2px 4px),
+                         repeating-linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a 100%);
+  }
+  
+  @media (prefers-color-scheme: dark) {
+      :root {
+          --thickness-text-card: 465;
+          --thickness-title-card: 785;
+          --background-color: #000;
+          --accent-color: #00CC14;
+          --background-image:repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
+                             repeating-linear-gradient(to bottom, #000 0px 2px, transparent 2px 4px),
+                             repeating-linear-gradient(to bottom, #007f0c 0%, #004306 100%);
+          --color-button-text: #00CC14;
+      }
   }
