--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
   flex-direction: column;
   align-items: center;
   font-family: var(--main-font), sans-serif;
-  font-variation-settings: 'wght' var(--thickness-title-card);
   font-variation-settings: 'wght' var(--thickness-text-card);
   background-color: var(--background-color);
   color: var(--accent-color);
@@ -131,21 +130,23 @@
 }
 
 .card-itrm__title {
+  font-variation-settings: 'wght' var(--thickness-title-card);
   min-height: 31px;
   padding: 5px 24px 3px 10px;
   font-size: 18px;
-  font-weight: var(--thickness-title-card);
 }
 
 .card-item__img {
   position: relative;
   max-block-size: 696px;
   border-top: 2px solid var(--accent-color);
+  border-bottom: 2px solid var(--accent-color);
 }
 
 .item__img {
   width: 100%;
   height: 100%;
+  display: block;
 }
 
 .card-item__label {
@@ -166,23 +167,28 @@
 @supports (
   (-webkit-text-stroke: 1px var(--background-color))
   or
-    (-webkit-text-stroke: 1px var(--background-color))
+    (text-stroke: 1px var(--background-color))
 ) {
   .card-item__label {
     -webkit-text-stroke: 1px var( --background-color);
-    -webkit-text-stroke: 1px var( --background-color);
+    -webkit-text-stroke: 1px var( --background-color); /*не позволяет использовать без префикса*/
     text-shadow: none;
   }
 }
 
-.card-item__text {
-  padding: 31px 25px 27px 25px;
-  font-size: 18px;
-  line-height: 21px;
+.card__text-wrapper{
+  margin-block-end: 29px;
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
 }
 
-.card-item__sub-text {
-  padding: 0 25px;
+.card__content-wrapper {
+  padding: 25px 27px 24px 27px;
+}
+
+
+.card-item__text {
   font-size: 18px;
   line-height: 21px;
 }
@@ -190,7 +196,6 @@
 .card-buttons {
   display: flex;
   justify-content: flex-end;
-  padding: 25px 23px 22px 0px;
   align-items: center;
   gap: 6px;
 }
@@ -382,8 +387,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 8px;
-  margin: 0px auto 105px;
+  margin: 0px auto 100px;
   border: 2px solid var(--accent-color);
   font-family: var(--accent-font), fantasy;
   font-size: 14px;
@@ -468,4 +472,7 @@
     padding: 30px 40px;
   }
 
+  .card__text-wrapper{
+    margin-block-end: 24px;
+  }
 }
