--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,7 @@
     --thickness-title-card: 700;
     --background-color: #fff;
     --accent-color: #000;
+    --text-stroke-color: #fff;
     --background-image: url(../images/background-white.jpg),
                         repeating-linear-gradient(to right, #d3d3d3 0px 2px, transparent 2px 4px),
                         repeating-linear-gradient(to bottom, #d3d3d3 0px 2px, transparent 2px 4px),
